Add test alert to check if JavaScript is working

--- a/index.html
+++ b/index.html
@@ -487,6 +487,11 @@
     <!-- Configuration and License Scripts -->
     <script src="config.js"></script>
     <script src="license-manager.js"></script>
+    <script>
+        // Test if JavaScript is working
+        console.log("HTML: JavaScript is working!");
+        alert("License validation test - this should show an error overlay");
+    </script>
 </head>
 <body>
 
